<resources>
    <string name="app_name">Arkanoid Game</string>
    <string name="ranking">RANKING</string>
    <string name="game_name">Arkanoid</string>
    <string name="play">PLAY</string>
    <string name="game_score">Score: %1$d</string>
    <string name="restart">RESTART</string>
    <string name="lost">YOU LOST!</string>
    <string name="type_name_hint">Hey, type your name!</string>
    <string name="menu_username">Hey, %1$s!</string>
    <string name="channel_name">Arkanoid Notifications Channel</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">MAP</string>
    <string name="choose_level">CHOOSE LEVEL:</string>
    <string name="exit">EXIT</string>
    <string name="resume">RESUME</string>
    <string name="pause">PAUSE</string>
    <string name="location_permission_hint">We need this permission to save your result.</string>
</resources>