<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="androidx.lifecycle.LiveData"/>
        <import type="android.text.TextUtils"/>
        <variable
            name="username"
            type="LiveData&lt;String>" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/menu_bg2"
        tools:context=".ui.menu.MenuActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/corners_shape"
            android:backgroundTint="#48021759"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee_shade"
                android:padding="20dp"
                android:text="@string/game_name"
                android:textColor="@color/game_blue"
                android:textSize="42sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/playButton"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleLayout"
            app:srcCompat="@drawable/blue_btn2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/play"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/playButton"
            app:layout_constraintEnd_toEndOf="@+id/playButton"
            app:layout_constraintStart_toStartOf="@+id/playButton"
            app:layout_constraintTop_toTopOf="@+id/playButton" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/ranking"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/rankingButton"
            app:layout_constraintEnd_toEndOf="@+id/rankingButton"
            app:layout_constraintStart_toStartOf="@+id/rankingButton"
            app:layout_constraintTop_toTopOf="@+id/rankingButton" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/map"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/mapButton"
            app:layout_constraintEnd_toEndOf="@+id/mapButton"
            app:layout_constraintStart_toStartOf="@+id/mapButton"
            app:layout_constraintTop_toTopOf="@+id/mapButton" />

        <ImageButton
            android:id="@+id/rankingButton"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/ranking"
            app:layout_constraintBottom_toTopOf="@+id/mapButton"
            app:layout_constraintEnd_toEndOf="@+id/playButton"
            app:layout_constraintStart_toStartOf="@+id/playButton"
            app:layout_constraintTop_toBottomOf="@+id/playButton"
            app:srcCompat="@drawable/blue_btn2" />

        <ImageButton
            android:id="@+id/mapButton"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/map"
            app:layout_constraintBottom_toTopOf="@+id/profileCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/blue_btn2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profileCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/m2" />

                <EditText
                    android:id="@+id/userNickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:hint="@string/type_name_hint"
                    android:inputType="textPersonName"
                    android:text="@{username}"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profileImage" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>